--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
               href="./css/styles.css">
     </head>
     <body>
-    <h1>Hello</h1>
+        <h1>Dominique Vilain</h1>
+        <p>J’enseigne les technologies du Web à la Haute École de la province, avec un accent particulier sur les questions liées à la qualité Web.</p>
     </body>
 </html>
